# code-modernization-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
cobal/: main.cob  math_utils.cob
code/: main.py  math_utils.py
notebook/: 01_lcm.ipynb  02_lcm.ipynb
old_code/: test_pythonv2.py
